[project]
name = "hltv-api"
version = "0.1.0"
description = "Unofficial HLTV API written in Python"
authors = [
    {name = "Madi S",email = "khovansky99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
